trading finished whatsnew section privacy policy github sponsors link tooltip increased duration localization version bump