@@ -54,7 +54,10 @@ jlink {
         name = 'Elite Dangerous Odyssey Materials Helper'
         jvmArgs = [
                 '-Dapp.version=' + project.version,
-                os.isWindows() ? '-Djavafx.cachedir=javafx-cache' : ''
+                os.isWindows() ? '-Djavafx.cachedir=javafx-cache' : '',
+                '-Xmx1024M',
+                '--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls',
+                '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming'
         ]
     }
     jpackage {
@@ -98,21 +101,20 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
     implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
-
+    implementation 'org.apache.tomcat:tomcat-catalina:10.0.13'
     implementation('org.jfxtras:jmetro:11.6.15') {
         exclude group: 'org.openjfx'
     }
-    implementation("org.openjfx:javafx-base:16:${platform}")
-    implementation("org.openjfx:javafx-controls:16:${platform}")
-    implementation("org.openjfx:javafx-fxml:16:${platform}")
-    implementation("org.openjfx:javafx-graphics:16:${platform}")
-    implementation("org.openjfx:javafx-media:16:${platform}")
-
+    implementation("org.openjfx:javafx-base:17.0.0.1:${platform}")
+    implementation("org.openjfx:javafx-controls:17.0.0.1:${platform}")
+    implementation("org.openjfx:javafx-fxml:17.0.0.1:${platform}")
+    implementation("org.openjfx:javafx-graphics:17.0.0.1:${platform}")
+    implementation("org.openjfx:javafx-media:17.0.0.1:${platform}")
     implementation('org.controlsfx:controlsfx:11.1.0')
 
 //    testImplementation 'de.saxsys:jfx-testrunner:1.2'
     testImplementation 'de.saxsys:mvvmfx-testing-utils:1.8.0'
-    testImplementation("org.openjfx:javafx-swing:16:${platform}")
+    testImplementation("org.openjfx:javafx-swing:17.0.0.1:${platform}")
 
 }
 jpackage {
@@ -120,7 +122,9 @@ jpackage {
         dependsOn test
     }
 }
-
+run {
+    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls', '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming']
+}
 test {
     useJUnitPlatform {
 
